fix:sonar bugs